# adapter-poco-patch-sqlcipher

./: CMakeLists.txt
.tipi/: deps
poco/Data/SQLite/: CMakeLists.txt
